# UCL-PHAS0100

./: README.md
PHAS0100Assignment1/: CMakeLists.txt  CTestConfig.cmake  README.md
PHAS0100Assignment1/CMake/: CTestContinuous.cmake.in  CTestCustom.cmake.in  golSetupTesting.cmake
PHAS0100Assignment1/Code/: CMakeLists.txt
PHAS0100Assignment1/Code/CommandLineApps/: CMakeLists.txt  StillLifes.cpp  gofSimulator.cpp  main.cpp
PHAS0100Assignment1/Code/Lib/: CMakeLists.txt  golBasicTypes.cpp  golBasicTypes.h  golException.cpp  golException.h  golExceptionMacro.h  golGameOfLife.cpp  golGameOfLife.h  golMyFunctions.cpp  golMyFunctions.h
PHAS0100Assignment1/Testing/: CMakeLists.txt  golCatchMain.cpp  golCatchMain.h  golCommandLineArgsTest.cpp  golEmpty_Grid_Editing.cpp  golGrid_Initialisation.cpp  golIs_Count_Correct_Boundary_Condition_Corners.cpp  golIs_Count_Correct_Boundary_Condition_Sides.cpp  golIs_Oscillator_Oscillating.cpp  golIs_Random_Grid_Creating_Correct_Alive_Number.cpp  golIs_Random_Grid_Initialisation_Correct_Size.cpp  golRandom_Initial_Testing.cpp
PHAS0100Assignment1/Testing/Data/: count_test_file.txt  glider.txt  input.txt  oscillators.txt  still_lifes.txt
PHAS0100Assignment2/: CMakeLists.txt  CTestConfig.cmake  README.md  appveyor.yml
PHAS0100Assignment2/CMake/: CTestContinuous.cmake.in  CTestCustom.cmake.in  nbsimSetupTesting.cmake
PHAS0100Assignment2/Code/: CMakeLists.txt
PHAS0100Assignment2/Code/CommandLineApps/: CMakeLists.txt  nbsimExerciseApp.cpp  randomSystemSimulator.cpp  solarSystemSimulator.cpp
PHAS0100Assignment2/Code/Lib/: CMakeLists.txt  nbsimBasicTypes.cpp  nbsimBasicTypes.h  nbsimException.cpp  nbsimException.h  nbsimExceptionMacro.h  nbsimMassiveParticle.cpp  nbsimMassiveParticle.h  nbsimMyFunctions.cpp  nbsimMyFunctions.h  nbsimParticle.cpp  nbsimParticle.h  nbsimSolarSystemData.ipp  nbsimSystemSimulator.cpp  nbsimSystemSimulator.h
PHAS0100Assignment2/Testing/: CMakeLists.txt  nbsimBasicTest.cpp  nbsimCatchMain.cpp  nbsimCatchMain.h  nbsimCommandLineArgsTest.cpp
